--- a/data/Personaggi/Druido.tex
+++ b/data/Personaggi/Druido.tex
@@ -8,3 +8,5 @@
   \it
   "Siamo a Fisica, quantifichi!" \\ (R. Dolesi)
 \end{DndReadAloud}
+
+\subsection{Un caffè buonissimo, qualcosa di bello da mangiare}
