--- a/data/Personaggi/Incantesimi.tex
+++ b/data/Personaggi/Incantesimi.tex
@@ -63,9 +63,16 @@ La prossima volta che l'incantatore colpisce una creatura con un attacco con un'
 \DndSpellHeader{Scarica Elementale}
 {Invocazione di 3° livello}
 {1 azione}
-{Incantaore (linea di 30 metri)}
+{Incantatore (linea di 30 metri)}
 {V, S}
 {Istantanea}
 Un raggio di energia elementale parte dall'incantatore in una direzione a sua scelta, formando una linea lunga 30 metri a larga 1,5 metri. Ogni creatura situata entro una sfera del raggio di 6 metri centrata su quel punto deve effettuare un tiro salvezza su Destrezza. Se lo fallisce, subisce 8d6 danni da  energia elementale del tipo scelto dall'incantatore (acido, freddo, fulmine, fuoco o tuono), mentre se lo supera, subisce soltanto la metà di quei danni. 
 L'esplosione si diffonde oltre gli angoli e danneggia ogni oggetto vulnerabile al tipo di danno scelto nell'area che non sia indossato o trasportato.
 
+\DndSpellHeader{Verità Assoluta}
+{Divinazione di 9° livello}
+{1 azione}
+{Incantatore (Raggio 30 metri)}
+{V,S}
+{Concentrazione, 1 minuto}
+L'incantatore emana un'aura di pura verità che avvolge la sua persona e si espande in un raggio di 30 metri. \\ Durante la durata dell'incantesimo, ogni creatura all'interno dell'area di effetto deve superare un tiro salvezza su Saggezza o essere obbligata a dire la verità in risposta a qualsiasi domanda posta da chiunque nell'area, incluso l'incantatore. \\ Le creature che falliscono il tiro salvezza non possono mentire né ingannare in alcun modo durante la durata dell'incantesimo. Se una creatura che ha fallito il tiro salvezza cerca di mentire o ingannare, subisce automaticamente 6d6 danni psichici. \\ Inoltre, l'aura di verità assoluta permea il campo e rivela qualsiasi tentativo di distorsione o inganno nella comunicazione, rendendo l'Incantatore consapevole di tutti i tiri salvezza superati. \\ Una volta terminata la durata dell'incantesimo o quando l'incantatore interrompe la concentrazione, l'aura di verità si dissipa e le creature precedentemente soggette all'incantesimo possono tornare a mentire o ingannare normalmente.
