--- a/data/Personaggi/Stregone.tex
+++ b/data/Personaggi/Stregone.tex
@@ -7,12 +7,44 @@
 
 \section{Privilegi di Classe Opzionali}
 
+\subsection{Riserva di punti stregoneria aumentata}
+
+Il numero massimo di punti stregoneria di uno Stregone è pari al suo livello da Stregone + il suo bonus di competenza
+
+\subsection{Opzioni di metamagia}
+
+\subsubsection*{Incantesimo leggendario}
+
+Lo Stregone può spendere 4 punti stregoneria per lanciare un incantesimo di 3° livello o inferiore come azione leggendaria (ovvero durante il turno altrui).
+
 \section{Dinastia di Analisti}
 
 \begin{DndReadAloud}
-    \it
-    "\begin{math}f(x)\end{math} \ è suriettiva se whoop whoop, whooooooop!" \\ (A. Defranceschi)
-  \end{DndReadAloud}
+  \it
+  "\begin{math}f(x)\end{math} \ è suriettiva se whoop whoop, whooooooop!" \\ (A. Defranceschi)
+\end{DndReadAloud}
+
+\DndDropCapLine{L}{}'Analisi Matematica anche a livelli tutto sommato superficiali richiede la visualizzazione di concetti che i più potrebbero ritenere... psichedelici. \\ \begin{math} \mathbb{R}^7, \mathbb{C}^2\end{math}, spazi misurabili, aperti, chiusi, tutte strutture che una mente umana fatica a concepire. \\ Accadde che un giorno un'Analista particolarmente dedita alla sua disciplina fece ricorso ad un... \textit{aiutino druidico} per visualizzare certi concetti, ma purtroppo non sapeva di stare aspettando un figlio... Dopo qualche anno, fu estremamente sorpresa dalle doti di questo bambino, capace di oltrepassare senza problemi (... più o meno) i limiti della mente umana.
+
+\subsection{Teorema prezzemolino}
+
+A partire dal 1° livello, lo Stregone ottiene competenza in Natura, Sopravvivenza e nell'uso degli attrezzi da erborista.
+
+\subsection{Connesso per poligonali}
+
+A partire dal 1° livello, lo Stregone può seguire qualunque cammino lui voglia per arrivare in un punto qualsiasi nel raggio della sua velocità di movimento. Se esce dall'area minacciata di un nemico, subisce comunque gli attacchi di opportunità.
+
+\subsection{Funzione Inversa}
+
+A partire dal 6° livello, un numero di volte pari a metà del suo bonus di competenza per riposo lungo, lo Stregone quando lancia l'incantesimo \textit{Scudo} può spendere un punto stregoneria per riflettere l'incantesimo invece di pararlo semplicemente, usando come tiro per colpire il tiro originale dell'incantesimo.
+
+\subsection{Superfici Complesse}
+
+A partire dal 14° livello, l'Analista inizia ad interessarsi all'Analisi complessa e impara a vedere la realtà come si presenta davvero, reale e immaginaria. \\ Ottiene \textit{Vista Pura} nel raggio di 18 m.
+
+\subsection{Limite all'Infinito}
+
+A partire dal 18° livello, all'inizio del suo turno lo Stregone può spendere tutti i suoi punti stregoneria (Almeno 13) per sovraccaricarsi di energia magica. \\ Fino alla fine dello stesso turno, tutti i tiri per i danni da lui inflitti sono massimizzati (a meno di TS superati) e tutti gli incantesimi da lui lanciati che richiedono un tiro per colpire colpiscono automaticamente.
 
 \section{Cavaliere della Trama}
 \textit{Questa origine stregonesca non è di mia invenzione, è un'origine homebrew piuttosto popolare che includo e ribilancio qui al fine di includerla nelle mie campagne}
