--- a/data/Personaggi/Warlock.tex
+++ b/data/Personaggi/Warlock.tex
@@ -7,7 +7,9 @@
 
 \section{Privilegi di Classe Opzionali}
 
-\subsection{Supplica Occulta: Occhi Aperti}
+\subsection{Suppliche Occulte}
+
+\subsubsection{Occhi Aperti}
 \textit{Prerequisito: 18° livello} \\ Il potere del patrono, apre gli occhi al Warlock, che potrebbe non essere più in grado di richiuderli: ottiene \textit{vista pura}, non può essere limitata o disattivata se non rimuovendo questa supplica o accecandosi volontariamente. \\
 La costante esposizione al Piano Etereo è estremamente impegnativa anche per la mente di incantatori molto esperti, quindi il Warlock ha bisogno di tempo ed esperienza per abituarsi.
 \paragraph{Dopo nessun aumento di livello}Il Warlock ha costanti emicranee di intensità variabile in base alla presenza di auree molto potenti; in presenza di creature la cui forma nel Piano Etereo risulterebbe sconvolgente o disturbante (a discrezione del DM), il Warlock ha svantaggio ai TS per mantenere la concentrazione e ogni attacco inflitto da tali creature provoca 1d4-1 danni psichici aggiuntivi.
@@ -15,7 +17,7 @@ La costante esposizione al Piano Etereo è estremamente impegnativa anche per la
 \paragraph{Dopo due aumenti di livello o al 20° livello} Ormai la \textit{vista pura} è l'unica vista che il Warlock conosca, il Piano Etereo e il Piano Materiale per lui sono assolutamente inseparabili. La \textit{vista pura} non gli causa più nessun problema. Da questo momento in poi, rimuovere questa supplica gli causerebbe cecità permanente, incurabile se non da altre sorgenti di \textit{vista pura} (come \textit{Visione del Vero}). \\
 Riottenere questa supplica dopo averla rimossa richiede di riabituarsi a essa.
 
-\subsection{Supplica Occulta: Deflagrazione aleatoria}
+\subsubsection{Deflagrazione Aleatoria}
 \textit{Prerequisito: trucchetto Deflagrazione Occulta} \\
 Un numero di volte pari al suo bonus di competenza per riposo breve, quando il Warlock colpisce un bersaglio con il trucchetto Deflagrazione Occulta, come azione bonus può imporre al bersaglio di tirare dalla tabella della Magia Selvaggia un numero di volte pari al numero di raggi da cui è stato colpito.
 
