--- a/temp.tex
+++ b/temp.tex
@@ -21,6 +21,7 @@
 \usepackage{shortvrb}
 \usepackage{stfloats}
 \usepackage{hyperref}
+\usepackage{amsfonts}
 
 \captionsetup[table]{labelformat=empty,font={sf,sc,bf,},skip=0pt}
 
@@ -34,6 +35,6 @@
 
 \begin{document}
 
-\input{data/Eovras/Magia.tex
+\input{data/Personaggi/Paladino.tex}
 
 \end{document}
