--- a/Guida.tex
+++ b/Guida.tex
@@ -20,6 +20,7 @@
 \usepackage{listings}
 \usepackage{shortvrb}
 \usepackage{stfloats}
+\usepackage{amsfonts}
 %\usepackage{hyperref}
 
 \captionsetup[table]{labelformat=empty,font={sf,sc,bf,},skip=0pt}
