un po' un cazzo

--- a/data/Personaggi/Paladino.tex
+++ b/data/Personaggi/Paladino.tex
@@ -11,16 +11,25 @@
   \begin{math}[a = A] \Rightarrow [a = (-1)^{2a^2}(A-1)+1]\end{math} \ "Banale aritmetica" \\ (R. Zunino)
 \end{DndReadAloud}
 
+\begin{DndTable}{XX}
+  Livello da Paladino & Incantesimi \\
+  3°  & \\
+  5°  & \\
+  9°  & \\
+  13° & \\
+  17° & \\
+\end{DndTable}
+
 \subsection{Incanalare Divinità}
 Quando il Paladino acquisisce questo giuramento al 3° livello, ottiene le seguenti opzioni di Incanalare Divinità:
-\paragraph{Circuiti Infallibili}A partire dal 3º livello, il Paladino può usare un'azione per intessere circuiti logici invisibili attorno a sé. Questi circuiti durano 1 ora, garantiscono un bonus pari al suo modificatore di Carisma (almeno +1) alle sue prove di Percezione e lo rendono immune al fascino e alle illusioni magiche. Il Paladino ottiene vantaggio ai tiri salvezza contro incantesimi e abilità che causano confusione o manipolazione mentale.
+\paragraph{Circuiti Infallibili}A partire dal 3° livello, il Paladino può usare un'azione per intessere circuiti logici invisibili attorno a sé. Questi circuiti durano 1 ora, garantiscono un bonus pari al suo modificatore di Carisma (almeno +1) alle sue prove di Percezione e lo rendono immune al fascino e alle illusioni magiche. Il Paladino ottiene vantaggio ai tiri salvezza contro incantesimi e abilità che causano confusione o manipolazione mentale.
 \paragraph{Inferenza Logica} Il Paladino può passare un minuto a concentrarsi per comporre una dimostrazione ed ottenere la conferma di verità o falsità assoluta di una proposizione a sua scelta.
 
 \subsection{Esecuzione Deterministica}
-A partire dal 7º livello, il Paladino è in grado di agire con precisione e rapidità estrema, seguendo una sequenza di azioni predeterminate. \\ Una volta al giorno, può dichiarare di eseguire una serie di azioni con una precisione quasi perfetta, ottenendo vantaggio su tutti i tiri per colpire e un bonus pari al suo modificatore di Carisma (almeno +1) a ogni istanza dei danni da lui inflitti per il suo prossimo turno.
+A partire dal 7° livello, il Paladino è in grado di agire con precisione e rapidità estrema, seguendo una sequenza di azioni predeterminate. \\ Una volta al giorno, può dichiarare di eseguire una serie di azioni con una precisione quasi perfetta, ottenendo vantaggio su tutti i tiri per colpire e un bonus pari al suo modificatore di Carisma (almeno +1) a ogni istanza dei danni da lui inflitti per il suo prossimo turno.
 
 \subsection{Assioma Protettivo}
-A partire dal 15º livello, il Paladino può creare un campo di forza logico intorno a sé e ai suoi alleati che dura 10 minuti. Quando un alleato all'interno del raggio di 30 metri viene colpito da un attacco, il paladino può reagire istantaneamente e spendere uno slot incantesimo per ridurre i danni subiti da quell'alleato. Il danno viene ridotto di una quantità pari al suo bonus di Carisma + il suo bonus di competenza + il livello dello slot speso.
+A partire dal 15° livello, il Paladino può creare un campo di forza logico intorno a sé e ai suoi alleati che dura 10 minuti. Quando un alleato all'interno del raggio di 30 metri viene colpito da un attacco, il paladino può reagire istantaneamente e spendere uno slot incantesimo per ridurre i danni subiti da quell'alleato. Il danno viene ridotto di una quantità pari al suo bonus di Carisma + il suo bonus di competenza + il livello dello slot speso.
 
 \subsection{Teorema di Correttezza}
-Al raggiungimento del 20º livello, il paladino raggiunge la massima padronanza della logica costruttivista. \\ Una volta per riposo lungo, può lanciare l'incantesimo \textit{Verità Assoluta} senza consumare uno slot incantesimo. \\ Inoltre, l'opzione di Incanalare Divinità \textit{Inferenza Logica} viene potenziata, permettendo al Paladino di derivare un'informazione corretta che non conosce.
+Al raggiungimento del 20° livello, il paladino raggiunge la massima padronanza della logica costruttivista. \\ Una volta per riposo lungo, può lanciare l'incantesimo \textit{Verità Assoluta} senza consumare uno slot incantesimo. \\ Inoltre, l'opzione di Incanalare Divinità \textit{Inferenza Logica} viene potenziata, permettendo al Paladino di derivare un'informazione corretta che non conosce.
