buff zona di verità

--- a/data/Personaggi/Incantesimi.tex
+++ b/data/Personaggi/Incantesimi.tex
@@ -74,5 +74,5 @@ L'esplosione si diffonde oltre gli angoli e danneggia ogni oggetto vulnerabile a
 {1 azione}
 {Incantatore (Raggio 30 metri)}
 {V,S}
-{Concentrazione, 1 minuto}
-L'incantatore emana un'aura di pura verità che avvolge la sua persona e si espande in un raggio di 30 metri. \\ Durante la durata dell'incantesimo, ogni creatura all'interno dell'area di effetto deve superare un tiro salvezza su Saggezza o essere obbligata a dire la verità in risposta a qualsiasi domanda posta da chiunque nell'area, incluso l'incantatore. \\ Le creature che falliscono il tiro salvezza non possono mentire né ingannare in alcun modo durante la durata dell'incantesimo. Se una creatura che ha fallito il tiro salvezza cerca di mentire o ingannare, subisce automaticamente 6d6 danni psichici. \\ Le creature che superano il tiro salvezza non possono comunque mentire, ma al massimo possono rifiutarsi di rispondere. \\ Inoltre, l'aura di verità assoluta permea il campo e rivela qualsiasi tentativo di distorsione o inganno nella comunicazione, rendendo l'Incantatore consapevole di tutti i tiri salvezza superati. \\ Una volta terminata la durata dell'incantesimo o quando l'incantatore interrompe la concentrazione, l'aura di verità si dissipa e le creature precedentemente soggette all'incantesimo possono tornare a mentire o ingannare normalmente.
+{Concentrazione, 1 ora}
+L'incantatore emana un'aura di pura verità che avvolge la sua persona e si espande in un raggio di 30 metri. \\ Durante la durata dell'incantesimo, ogni creatura all'interno dell'area di effetto deve superare un tiro salvezza su Saggezza o essere obbligata a dire la verità in risposta a qualsiasi domanda posta da chiunque nell'area, incluso l'incantatore. \\ Le creature che falliscono il tiro salvezza non possono rifiutarsi di rispondere in alcun modo durante la durata dell'incantesimo.\\ Le creature che superano il tiro salvezza non possono comunque mentire, ma al massimo possono rifiutarsi di rispondere. \\ Una volta terminata la durata dell'incantesimo o quando l'incantatore interrompe la concentrazione, l'aura di verità si dissipa e le creature precedentemente soggette all'incantesimo possono tornare a mentire o ingannare normalmente.
