--- a/data/Eovras/Mythrenwald.tex
+++ b/data/Eovras/Mythrenwald.tex
@@ -84,7 +84,7 @@ Sono in pochi coloro che sanno che in realtà Halimath è giunto a Eovras quando
       Halimath è un Monaco dell'Ombra Redenta di 20° livello e un Druido del Circolo delle Stelle di 20° livello. Possiede tutti i tratti garantitigli da queste due classi.
 
       \DndMonsterAction{Incantesimi}
-      Halimath è un druido di 20° livello. Conosce tutti gli incantesimi da druido. Recupera i suoi slot dopo ogni riposo lungo.
+      Halimath è un druido di 20° livello. Conosce tutti gli incantesimi da druido. Recupera i suoi slot dopo ogni riposo lungo. La CD del tiro salvezza contro questi incantesimi è 25.
       \begin{DndTable}[header=Slot per livello]{XXXXXXXXX}
         1° & 2° & 3° & 4° & 5° & 6° & 7° & 8° & 9°\\
         8  & 6  & 6  & 4  & 3  & 2  & 2  & 1  & 1 \\
@@ -225,4 +225,10 @@ Un nano dal marcato accento nordico e dall'inesauribile voglia di lavorare. I su
 
 \subsection{Fillianore Halamis}
 
-\subsubsection{}
+\subsubsection{Figlia dell'Abisso}
+
+Capita che i Tiefling come la giovane Fillianore Halamis nascano da famiglie umane, ma questo non è il caso di questo Warlock che abita a Mythrenberg. Nata da una madre mortale e un maiar successivamente corrotto da Melkor in un balrog, porta su di sè i segni della maledizione di suo padre. \\ Per quanto la riguarda in realtà, non le importa molto. Fin da piccola ha vissuto a Mythrenwald con sua madre, giocando con gli spiritelli della Foresta, facendo scherzi agli anziani del concilio, leggendo libri presi in prestito dalla Biblioteca della Corteccia (che puntualmente Kur doveva andare a recuperare di persona) e sforzandosi di costruire mobili che non sembrassero opere d'arte moderna nella falegnameria di Y'Keah. \\ La sua adolescenza procedeva bene, fino a quando dopo una storia d'amore finita male qualcosa cambiò in lei... non è detto per il meglio.
+
+\subsubsection{L'incontro col Triangolo}
+
+Frustrata, spaventata e delusa, Fillianore si allontanò da Mythrenberg e iniziò ad esplorare parti più profonde e misteriose della foresta... fino ad incontrare una strana radura triangolare, al cui centro si trovava un piccolo stagno. La radura e lo stagno erano popolate da piante e animali... strani è la parola giusta. Sembravano in tutto e per tutto identici a quelli tipici della foresta, ma avevano un indefinibile \textit{qualcosa} di sbagliato. \\ Non si sa esattamente come Bill si sia presentato a Fillianore, nè quali fossero i termini del loro patto... Ma una volta uscita dalla radura, era chiaro che ci fosse qualcosa di diverso in lei. Tornò a Mythrenberg, dove vive tutt'ora con sua madre, ma da quel giorno ogni settimana, a mezzanotte tra il giovedì e il venerdì, apre un portale e sparisce per il resto della nottata... Chissà dove va...
