--- a/data/Personaggi/Stregone.tex
+++ b/data/Personaggi/Stregone.tex
@@ -7,6 +7,10 @@
 
 \section{Privilegi di Classe Opzionali}
 
+\subsection{Improvvisazione}
+
+La magia di uno Stregone è istintiva, deriva dal suo talento e dalle sue emozioni, quindi è sensato che gli giunga nel momento del bisogno. \\ Quando gli incantesimi conosciuti da uno Stregone dovrebbero aumentare salendo di livello, non li impara passivamente, ma ottiene degli slot temporanei aggiuntivi rispetto ai suoi, il cui livello è pari al livello massimo degli slot ordinari possieduti dallo Stregone e il cui numero è pari alla differenza tra il numero degli incantesimi che potrebbe conoscere e di quelli che conosce. \\ Questi slot sono cumulativi (il livello di ciascuno slot non sale tuttavia) e permangono finchè non vengono usati. Possono essere usati esclusivamente per lanciare incantesimi che lo Stregone non conosce ancora: quando un incantesimo viene lanciato in questo modo, lo Stregone lo aggiunge alla lista degli incantesimi che conosce.
+
 \subsection{Riserva di punti stregoneria aumentata}
 
 Il numero massimo di punti stregoneria di uno Stregone è pari al suo livello da Stregone + il suo bonus di competenza
@@ -15,7 +19,7 @@ Il numero massimo di punti stregoneria di uno Stregone è pari al suo livello da
 
 \subsubsection*{Incantesimo leggendario}
 
-Lo Stregone può spendere 4 punti stregoneria per lanciare un incantesimo di 3° livello o inferiore come azione leggendaria (ovvero durante il turno altrui).
+Lo Stregone può spendere 4 punti stregoneria per lanciare un incantesimo di 3° livello o inferiore (anche lanciato a livello più alto) come azione leggendaria (ovvero in qualsiasi momento del round). Questa opzione può essere usata solo una volta per round.
 
 \section{Dinastia di Analisti}
 
@@ -36,7 +40,7 @@ A partire dal 1° livello, lo Stregone può seguire qualunque cammino lui voglia
 
 \subsection{Funzione Inversa}
 
-A partire dal 6° livello, un numero di volte pari a metà del suo bonus di competenza per riposo lungo, lo Stregone quando lancia l'incantesimo \textit{Scudo} può spendere un punto stregoneria per riflettere l'incantesimo invece di pararlo semplicemente, usando come tiro per colpire il tiro originale dell'incantesimo.
+A partire dal 6° livello, un numero di volte pari a metà del suo bonus di competenza per riposo lungo, lo Stregone quando lancia l'incantesimo \textit{Scudo} può spendere un punto stregoneria per riflettere l'incantesimo invece di pararlo semplicemente, usando come tiro per colpire il tiro originale dell'incantesimo. \\ Se lo Stregone non conosce già l'incantesimo \textit{Scudo}, lo impara automaticamente e questo non viene conteggiato tra i suoi incantesimi conosciuti.
 
 \subsection{Superfici Complesse}
 
