--- a/data/Personaggi/Ladro.tex
+++ b/data/Personaggi/Ladro.tex
@@ -6,3 +6,42 @@
 \end{DndReadAloud}
 
 \section{Privilegi di Classe Opzionali}
+
+\subsection{Introvabile persino per il DM}
+
+A partire dal 1° livello, se nella narrazione non è specificato che stia facendo qualcos'altro, il Ladro può effettuare una prova di Furtività con una CD di 35. \\ Se la supera (o ottiene un 20 naturale), si materializza nella scena attualmente narrata ed è considerato nascosto da tutte le creature coscienti. \\ Se lo ritiene opportuno e il giocatore non è presente, il DM può effettuare questa prova al posto del giocatore.
+
+\section{Il Camminatore delle Ombre}
+
+\begin{DndReadAloud}
+  \it
+  "Beh, c'è chi dice che è morto. Baggianate, così penso io. No! Per me è ancora in circolazione..." \\ (Harry Potter e la Pietra Filosofale, 2001)
+\end{DndReadAloud}
+
+\subsection{CD del tiro salvezza}
+
+Alcune abilità del Camminatore delle Ombre impongono ai bersagli dei tiri salvezza oppure gli garantiscono la possibilità di lanciare incantesimi che impongono tiri salvezza. La CD di questi tiri è 8 + il bonus di competenza del Ladro + il suo modificatore di Destrezza.
+
+\subsection{Adottato dall'Ombra}
+
+A partire dal 3° livello, il Ladro acquisisce \textit{Scurovisione} e la capacità di vedere nell'oscurità magica, se non le possiede già.
+
+\subsection{Lampo nel Buio}
+
+A partire dal 3° livello, quando il Ladro colpisce una creatura col suo attacco furtivo e lui stesso si trova in uno spazio in condizioni di luce fioca o oscurità, questa deve superare un TS su Saggezza. Se lo fallisce, subisce altri danni radiosi ed è accecata fino all'inizio del turno successivo del ladro. \\ I danni radiosi subiti sono 1d6 per ogni 2d6 lanciati dal Ladro per l'attacco furtivo.
+
+\subsection{Passo nell'Ombra}
+
+A partire dal 9° livello, il Ladro può usare la sua Azione Scaltra per teletrasportarsi nell'ombra di una creatura che sia in grado di vedere. \\ Se il Ladro era nascosto alla creatura lo rimane, altrimenti può tirare per una prova di Furtività per nascondersi nell'ombra della creatura.
+
+\subsection{Cortina di Fumo!}
+
+A partire dal 13° livello, il Ladro può usare la sua Azione Scaltra per lanciare il trucchetto \textit{Illusione Minore} e gli incantesimi \textit{Camuffare Sè Stesso}, \textit{Movimenti del Ragno} e \textit{Oscurità} a volontà. \\ Inoltre, quando si trova in condizioni di luce fioca o oscurità, può usare la sua Azione Scaltra per lanciare l'incantesimo \textit{Invisibilità Superiore} su sè stesso a volontà.
+
+\subsection{Intoccabile come un'Ombra}
+
+A partire dal 17° livello, il Ladro quando si trova in condizioni di luce fioca o oscurità supera automaticamente tutti i tiri salvezza su Destrezza. \\ Inoltre il suo punteggio di Destrezza aumenta di 4, e il valore massimo del suo punteggio di Destrezza è 24.
+
+\subsection{Nemmeno Omatara potrebbe trovarlo}
+
+A partire dal 17° livello, se i punti ferita del Ladro scendono a 0 mentre si trova in condizioni di luce fioca o oscurità, questi rimane a 1 punto ferita e viene considerato automaticamente nascosto da tutte le creature coscienti, alleati compresi. Questo privilegio può essere utilizzato una sola volta per riposo lungo.
