--- a/data/Ipotesi/Regole.tex
+++ b/data/Ipotesi/Regole.tex
@@ -104,3 +104,7 @@ Questo tipo di assenza andrebbe discussa con più attenzione e soprattutto anche
 
 Un dado esplosivo è un dado che viene ritirato ogni volta che il suo risultato è pari al massimo del dado e alla fine del processo restituisce la somma delle iterazioni. \\ Ad esempio, un d4 esplosivo potrebbe restituire come serie di risultati 4, 4 e 2, quindi il risultato del tiro sarebbe 4+4+2=10.
 
+\subsection{Automulticlasse}
+
+Come ammetto la multiclasse, ammetto anche che un personaggio multiclassi nella sua stessa classe, magari per ricevere i privilegi di diverse sottoclassi! Al fine di conteggiare i suoi privilegi limitati tuttavia questi vanno conteggiati separatamente e secondo il livello della classe che glieli garantisce. \\ Ad esempio un Monaco di livello 10/10 potrà ridurre al massimo di 50 punti ferita il suo danno da caduta usando una reazione, mentre un Warlock di livello 11/11 avrà due utilizzi dell'Arcanum Mistico ma entrambi limitati al 6° livello. \\ Ogni ambiguità va sottoposta al giudizio del DM, ovviamente.
+
