--- a/data/Personaggi/Ladro.tex
+++ b/data/Personaggi/Ladro.tex
@@ -13,14 +13,12 @@ A partire dal 1° livello, se nella narrazione non è specificato che stia facen
 
 \section{Il Camminatore delle Ombre}
 
+\DndDropCapLine{S}{}arà capitato a tutti nelle proprie avventure di ritrovarsi nel party un Ladro, generalmente un halfling, che paradossalmente si rivelasse inutile nel momento del bisogno (peraltro nel suo elemento naturale, l'oscurità) data la sua mancanza inspiegabile di Scurovisione. Ispirato da queste edificanti esperienze, ho deciso di darvi questo nuovo archetipo ladresco, il Camminatore delle Ombre!
+
 \begin{DndReadAloud}
   \it
   "Beh, c'è chi dice che è morto. Baggianate, così penso io. No! Per me è ancora in circolazione..." \\ (Harry Potter e la Pietra Filosofale, 2001)
 \end{DndReadAloud}
-
-\subsection{CD del tiro salvezza}
-
-Alcune abilità del Camminatore delle Ombre impongono ai bersagli dei tiri salvezza oppure gli garantiscono la possibilità di lanciare incantesimi che impongono tiri salvezza. La CD di questi tiri è 8 + il bonus di competenza del Ladro + il suo modificatore di Destrezza.
 
 \subsection{Adottato dall'Ombra}
 
@@ -37,6 +35,7 @@ A partire dal 9° livello, il Ladro può usare la sua Azione Scaltra per teletra
 \subsection{Cortina di Fumo!}
 
 A partire dal 13° livello, il Ladro può usare la sua Azione Scaltra per lanciare il trucchetto \textit{Illusione Minore} e gli incantesimi \textit{Camuffare Sè Stesso}, \textit{Movimenti del Ragno} e \textit{Oscurità} a volontà. \\ Inoltre, quando si trova in condizioni di luce fioca o oscurità, può usare la sua Azione Scaltra per lanciare l'incantesimo \textit{Invisibilità Superiore} su sè stesso a volontà.
+\paragraph{CD del tiro salvezza}La CD del tiro salvezza contro questi incantesimi è pari a 8 + il bonus di competenza del Ladro + il suo modificatore di Destrezza.
 
 \subsection{Intoccabile come un'Ombra}
 
