--- a/Guida.tex
+++ b/Guida.tex
@@ -90,7 +90,7 @@
 
 \input{data/Personaggi/Incantesimi.tex}
 
-%\input{data/Personaggi/Oggetti.tex}
+\input{data/Personaggi/Oggetti.tex}
 
 \part{Il Mondo di Eovras}
 
