--- a/Guida.tex
+++ b/Guida.tex
@@ -21,7 +21,7 @@
 \usepackage{shortvrb}
 \usepackage{stfloats}
 \usepackage{amsfonts}
-%\usepackage{hyperref}
+\usepackage{hyperref}
 
 \captionsetup[table]{labelformat=empty,font={sf,sc,bf,},skip=0pt}
 
@@ -90,7 +90,7 @@
 
 \input{data/Personaggi/Incantesimi.tex}
 
-\input{data/Personaggi/Oggetti.tex}
+%\input{data/Personaggi/Oggetti.tex}
 
 \part{Il Mondo di Eovras}
 
