E chi si lamenta?

--- a/Guida.tex
+++ b/Guida.tex
@@ -58,7 +58,7 @@
 
 \part{Opzioni per i personaggi}
 
-\input{data/Personaggi/Razze.tex}
+%\input{data/Personaggi/Razze.tex}
 
 \input{data/Personaggi/Artefice.tex}
 
