--- a/data/Personaggi/Monaco.tex
+++ b/data/Personaggi/Monaco.tex
@@ -31,7 +31,7 @@ Tra i molti privilegi concessi dalla via dell'Ombra, vi è quello di lanciare al
 
 \paragraph{Slot incantesimo}La tabella indica quanti slot incantesimo possiede un Monaco Redento per lanciare i suoi incantesimi di 1° livello e di livello superiore. \\ Per lanciare uno di questi incantesimi, il Monaco deve spendere uno slot incantesimo di livello pari o superiore al livello dell'incantesimo. Per esempio, se un Monaco conosce l'incantesimo di 1° livello \textit{Scudo} e possiede uno slot incantesimo di 1° livello e uno slot incantesimo di 2° livello, può lanciare \textit{Scudo} usando uno qualsiasi dei due slot. \\ Il Monaco recupera tutti gli slot incantesimo spesi quando completa un riposo lungo.
 
-\paragraph{Incantesimi conosciuti di 1° livello e superiore}Un Monaco Redento conosce tre incantesimi di 1° livello a sua scelta dalla lista di incantesimi del druido. La colonna "Incantesimi Conosciuti" nella tabella indica quando un Monacoo impara altri incantesimi di 1° livello o di livello superiore. Ognuno di questi incantesimi deve appartenere a un livello di cui il Monaco possiede degli slot incantesimo. Per esempio, quando un Monaco arriva al 7° livello in questa classe, può apprendere un nuovo incantesimo di 1° o 2° livello. \\ Ogni volta che il Monaco acquisisce un livello, può sostituire uno degli incantesimi da Monaco che conosce con un altro incantesimo a sua scelta della lista degli incantesimi del druido. Il nuovo incantesimo deve essere di un livello di cui il Monaco possiede almeno uno slot incantesimo.
+\paragraph{Incantesimi preparati di 1° livello e superiore}Un Monaco Redento prepara tre incantesimi di 1° livello a sua scelta dalla lista di incantesimi del druido. La colonna "Incantesimi Preparati" nella tabella indica quanti incantesimi di 1° livello o di livello superiore un Monaco può preparare. Ognuno di questi incantesimi deve appartenere a un livello di cui il Monaco possiede degli slot incantesimo.\\ Ogni volta che il Monaco completa un riposo lungo, può preparare incantesimi diversi della lista degli incantesimi del druido. Tutti gli incantesimi preparati devono essere di un livello di cui il Monaco possiede almeno uno slot incantesimo.
 
 \paragraph{Caratteristica da incantatore}Saggezza è la caratteristica da incantatore usata per gli incantesimi da Monaco Redento. Il potere dei suoi incantesimi deriva dalla sua sintonia con il Ki intorno a lui. Un Monaco usa Saggezza ogni volta che un incantesimo fa riferimento alla sua caratteristica da incantatore. Usa inoltre il suo modificatore di Saggezza per definire la CD del tiro salvezza di un incantesimo da Monaco da lui lanciato e quando effettua un tiro per colpire con un incantesimo.
 
@@ -40,7 +40,7 @@ Tra i molti privilegi concessi dalla via dell'Ombra, vi è quello di lanciare al
 \paragraph{Modificatore di attacco dell'incantesimo}= il bonus di competenza del Monaco + il modificatore di Saggezza del Monaco
 
 \begin{DndTable}{XXXXXXX}
-  Livello & Truc. con. & Inc. con. & Slot di 1° livello & Slot di 2° livello & Slot di 3° livello & Slot di 4° livello\\
+  LV. & Truc. con. & Inc. prep. & Slot 1° LV. & Slot 2° LV. & Slot 3° LV. & Slot 4° LV.\\
   3° & 2 & 3 & 2 & - & - & - \\
   4° & 2 & 4 & 3 & - & - & - \\
   5° & 2 & 4 & 3 & - & - & - \\
