--- a/data/Personaggi/Monaco.tex
+++ b/data/Personaggi/Monaco.tex
@@ -29,7 +29,7 @@ Tra i molti privilegi concessi dalla via dell'Ombra, vi è quello di lanciare al
 
 \paragraph{Trucchetti} Un Monaco Redento conosce due trucchetti a sua scelta tratti dalla lista degli incantesimi del druido. Apprende un trucchetto da druido aggiuntivo a sua scelta al 10° livello.
 
-\paragraph{Slot incantesimo}La tabella indica quanti slot incantesimo possiede un Monaco Redento per lanciare i suoi incantesimi di 1° livello e di livello superiore. \\ Per lanciare uno di questi incantesimi, il Monaco deve spendere uno slot incantesimo di livello pari o superiore al livello dell'incantesimo. Per esempio, se un Monaco conosce l'incantesimo di 1° livello \textit{Scudo} e possiede uno slot incantesimo di 1° livello e uno slot incantesimo di 2° livello, può lanciare \textit{Scudo} usando uno qualsiasi dei due slot. \\ Il Monaco recupera tutti gli slot incantesimo spesi quando completa un riposo lungo.
+\paragraph{Slot incantesimo}La tabella indica quanti slot incantesimo possiede un Monaco Redento per lanciare i suoi incantesimi di 1° livello e di livello superiore. \\ Per lanciare uno di questi incantesimi, il Monaco deve spendere uno slot incantesimo di livello pari o superiore al livello dell'incantesimo. Per esempio, se un Monaco ha preparato l'incantesimo di 1° livello \textit{Scudo} e possiede uno slot incantesimo di 1° livello e uno slot incantesimo di 2° livello, può lanciare \textit{Scudo} usando uno qualsiasi dei due slot. \\ Il Monaco recupera tutti gli slot incantesimo spesi quando completa un riposo lungo.
 
 \paragraph{Incantesimi preparati di 1° livello e superiore}Un Monaco Redento prepara tre incantesimi di 1° livello a sua scelta dalla lista di incantesimi del druido. La colonna "Incantesimi Preparati" nella tabella indica quanti incantesimi di 1° livello o di livello superiore un Monaco può preparare. Ognuno di questi incantesimi deve appartenere a un livello di cui il Monaco possiede degli slot incantesimo.\\ Ogni volta che il Monaco completa un riposo lungo, può preparare incantesimi diversi della lista degli incantesimi del druido. Tutti gli incantesimi preparati devono essere di un livello di cui il Monaco possiede almeno uno slot incantesimo.
 
@@ -39,26 +39,26 @@ Tra i molti privilegi concessi dalla via dell'Ombra, vi è quello di lanciare al
 
 \paragraph{Modificatore di attacco dell'incantesimo}= il bonus di competenza del Monaco + il modificatore di Saggezza del Monaco
 
-\begin{DndTable}{XXXXXXX}
-  LV. & Truc. con. & Inc. prep. & Slot 1° LV. & Slot 2° LV. & Slot 3° LV. & Slot 4° LV.\\
-  3° & 2 & 3 & 2 & - & - & - \\
-  4° & 2 & 4 & 3 & - & - & - \\
-  5° & 2 & 4 & 3 & - & - & - \\
-  6° & 2 & 4 & 3 & - & - & - \\
-  7° & 2 & 5 & 4 & 2 & - & - \\
-  8° & 2 & 6 & 4 & 2 & - & - \\
-  9° & 2 & 6 & 4 & 2 & - & - \\
-  10° & 3 & 7 & 4 & 3 & - & - \\
-  11° & 3 & 8 & 4 & 3 & - & - \\
-  12° & 3 & 8 & 4 & 3 & - & - \\
-  13° & 3 & 9 & 4 & 3 & 2 & - \\
-  14° & 3 & 10 & 4 & 3 & 2 & - \\
-  15° & 3 & 10 & 4 & 3 & 2 & - \\
-  16° & 3 & 11 & 4 & 3 & 3 & - \\
-  17° & 3 & 11 & 4 & 3 & 3 & - \\
-  18° & 3 & 11 & 4 & 3 & 3 & - \\
-  19° & 3 & 12 & 4 & 3 & 3 & 1 \\
-  20° & 3 & 13 & 4 & 3 & 3 & 1 \\
+\begin{DndTable}[header= Slot Incantesimo per livello]{XXXXXXXXXX}
+  Livello da Monaco & & Trucchetti conosciuti & & Incantesimi preparati & & 1° Lv. & 2° Lv. & 3° Lv. & 4° Lv.\\
+  3° & & 2 & & 3 & & 2 & - & - & - \\
+  4° & & 2 & & 4 & & 3 & - & - & - \\
+  5° & & 2 & & 4 & & 3 & - & - & - \\
+  6° & & 2 & & 4 & & 3 & - & - & - \\
+  7° & & 2 & & 5 & & 4 & 2 & - & - \\
+  8° & & 2 & & 6 & & 4 & 2 & - & - \\
+  9° & & 2 & & 6 & & 4 & 2 & - & - \\
+  10° & & 3 & & 7 & & 4 & 3 & - & - \\
+  11° & & 3 & & 8 & & 4 & 3 & - & - \\
+  12° & & 3 & & 8 & & 4 & 3 & - & - \\
+  13° & & 3 & & 9 & & 4 & 3 & 2 & - \\
+  14° & & 3 & & 10 & & 4 & 3 & 2 & - \\
+  15° & & 3 & & 10 & & 4 & 3 & 2 & - \\
+  16° & & 3 & & 11 & & 4 & 3 & 3 & - \\
+  17° & & 3 & & 11 & & 4 & 3 & 3 & - \\
+  18° & & 3 & & 11 & & 4 & 3 & 3 & - \\
+  19° & & 3 & & 12 & & 4 & 3 & 3 & 1 \\
+  20° & & 3 & & 13 & & 4 & 3 & 3 & 1 \\
 \end{DndTable}
 
 \subsection{Aura viva}
