--- a/data/Personaggi/Monaco.tex
+++ b/data/Personaggi/Monaco.tex
@@ -21,7 +21,7 @@ Un Monaco competente può usare un punto ki per aggiungere il suo modificatore d
 
 \subsection{Pentimento e Redenzione}
 
-\DndDropCapLine{S}{}ebbene tutti i monaci condividano la saggezza degli antichi maestri, ci sono tradizioni che si allontanano dalla loro illuminazione: è questo il caso della Via dell'Ombra. \\ Talvolta però accade che un Monaco, dopo aver sfiorato la morte ad esempio, un Monaco può decidere di allontanarsi da queste pratiche e riscoprire la dimensione più meditativa, pietosa e naturale delle arti del ki.
+\DndDropCapLine{S}{}ebbene tutti i monaci condividano la saggezza degli antichi maestri, ci sono tradizioni che si allontanano dalla loro illuminazione: è questo il caso della Via dell'Ombra. \\ Talvolta però accade che un Monaco, dopo aver sfiorato la morte ad esempio, possa decidere di allontanarsi da queste pratiche e riscoprire la dimensione più meditativa, pietosa e naturale delle arti del ki.
 
 \subsection{Magia del ki}
 
